objects/Commodity__c.object
<CustomObject>
    <fields>
        <fullName>Category_Formula__c</fullName>
        <formula>Category__r.Name</formula>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select a category for this commodity</inlineHelpText>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Commodity__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Category</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Commodity__c</referenceTo>
        <relationshipLabel>Commodities</relationshipLabel>
        <relationshipName>Commodities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Covered_Produce_Status__c</fullName>
        <label>Covered Produce Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Covered</fullName>
                </value>
                <value>
                    <fullName>Not Covered</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Growing__c</fullName>
        <label>Growing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Harvesting__c</fullName>
        <label>Harvesting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Holding__c</fullName>
        <label>Holding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Commodities</relationshipLabel>
        <relationshipName>Commodities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PDAT_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PDAT Name</label>
        <referenceTo>Commodity_PDAT__c</referenceTo>
        <relationshipLabel>Commodities</relationshipLabel>
        <relationshipName>Commodities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PDAT_Value_Formula__c</fullName>
        <formula>PDAT_Name__r.PDAT_Value__c</formula>
        <label>PDAT Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing__c</fullName>
        <label>Packing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority_Commodity__c</fullName>
        <label>Priority Commodity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processing__c</fullName>
        <label>Processing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail__c</fullName>
        <label>Retail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select a Sub-Category for this commodity.</inlineHelpText>
        <label>Sub-Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Commodity__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Sub-Category</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Commodity__c</referenceTo>
        <relationshipLabel>Commodities (Sub-Category)</relationshipLabel>
        <relationshipName>CommoditiesSubCat</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Commodity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>PDAT_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Commodity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commodities</pluralLabel>
    <recordTypes>
        <fullName>Category</fullName>
        <active>true</active>
        <label>Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sub_Category</fullName>
        <active>true</active>
        <label>Sub-Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>Type</fullName>
        <active>true</active>
        <label>Type</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>